kubernetes/frontend_files/voteapp-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cloudacademy
  labels:
    role: frontend
spec:
  ports:
   - protocol: TCP
     port: 80
  selector:
    role: frontend
