kubernetes/frontend_files/voteapp-frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: cloudacademy
spec:
 ingressClassName: nginx
 rules:
 - host: frontend.spcluster.tk
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: frontend
           port: 
             number: 80
 - host: backend.spcluster.tk
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: api
           port: 
             number: 8080
